# project_management_lgb_generation

./: CMakeLists.txt  conanfile.txt  main.cpp  setup.py  setup_plain_cpp.py
src/: AssignedUser.h  BaseJsonStruct.h  Comment.h  ConfigReport.h  Dashboard.cpp  Dashboard.h  MongoTypes.h  OrganizationContentClassification.h  ProgressInfo.h  Project.h  SubTask.h  Task.h  TaskInfo.h  TeamData.h  UserData.h  jsonObjects.h  types.h
